$Amigan: fakedbfs/CHANGELOG,v 1.14 2006/01/11 01:42:00 dcp1990 Exp $

Changelog

2.0.0-RELEASE ("Doctor Wu")
*ficl has been imported into the tree and work started; see libfakedbfs/ficl.c
*answer_t members have been consolidated into a union to save space. This may cause problems; we'll see
*freg now supports substrings; the API has changed to support this. See the freg_* functions.
*configuration subsystem added

1.1.0-RELEASE ("Bodhisattva")
*All indexing functions now accept a last argument, def, for default fields. This is to facilitate our default spec parser for findex(1).
*Makefiles should work with gmake
*Introduced new usnumber element into DataType enum. This shouldn't require the database to be redone, since it's the last element.
*Introduced time datatype for lastupdate, along with support for it in fquery(1)
*Added -u option to findex(1) for defspecs
*New defspec code
*Fixed various querying bugs (choking on the oth_ stuff when an enum didn't have an oth_ field, for example)
*Queries now support COLS()
*Added !=,>,<,>=,<= operators and associated opcodes to query subsystem
*fedit "works"

1.0.0-RELEASE ("Steely Dan")
*Initial Release